[package]
name = "certificate_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
flate2 = "1.0.25"
hex = "0.4.3"
ic-agent = "0.31.0"
ic-utils = "0.31.0"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"] }
ic-response-verification = { path = "../../response-verification/packages/ic-response-verification", features = ["debug"] }
ic-http-certification = { path = "../../response-verification/packages/ic-http-certification" }
